# avream

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  flake.nix  mkdocs.yml  pyproject.toml
.github/: dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: arch-validate.yml  ci.yml  deb-artifact.yml  flatpak.yml  nightly.yml  nix.yml  pages.yml  ppa.yml  release-drafter.yml  release.yml  rpm-artifact.yml  snap.yml
apt/: README.txt  avream-archive-keyring.gpg
apt/dists/stable/: InRelease  Release  Release.gpg
apt/pool/main/: avream-daemon_1.0.10_amd64.deb  avream-daemon_1.0.11_amd64.deb  avream-daemon_1.0.6_amd64.deb  avream-daemon_1.0.7_amd64.deb  avream-daemon_1.0.8_amd64.deb  avream-daemon_1.0.9_amd64.deb  avream-helper_1.0.10_amd64.deb  avream-helper_1.0.11_amd64.deb  avream-helper_1.0.6_amd64.deb  avream-helper_1.0.7_amd64.deb  avream-helper_1.0.8_amd64.deb  avream-helper_1.0.9_amd64.deb  avream-meta_1.0.10_amd64.deb  avream-meta_1.0.11_amd64.deb  avream-meta_1.0.6_amd64.deb  avream-meta_1.0.7_amd64.deb  avream-meta_1.0.8_amd64.deb  avream-meta_1.0.9_amd64.deb  avream-ui_1.0.10_amd64.deb  avream-ui_1.0.11_amd64.deb  avream-ui_1.0.6_amd64.deb  avream-ui_1.0.7_amd64.deb  avream-ui_1.0.8_amd64.deb  avream-ui_1.0.9_amd64.deb  avream_1.0.10_amd64.deb  avream_1.0.11_amd64.deb  avream_1.0.6_amd64.deb  avream_1.0.7_amd64.deb  avream_1.0.8_amd64.deb  avream_1.0.9_amd64.deb
debian/: avream.install  changelog  control  copyright  rules
docs/: API_V1.md  CLI_README.md  FAQ.md  INSTALL.md  RC_DRILL.md  RELEASE_CHECKLIST.md  RELEASE_TEMPLATE.md  SECURITY_DECISIONS.md  SUPPORTED_PLATFORMS.md  TROUBLESHOOTING.md  USER_GUIDE.md  index.md
docs/overrides/: main.html
helper/: Cargo.toml
helper/src/: main.rs  protocol.rs
packaging/arch/: PKGBUILD
packaging/debian/: postinst  prerm
packaging/desktop/: io.avream.AVream.appdata.xml  io.avream.AVream.desktop
packaging/flatpak/: io.avream.AVream.yml
packaging/polkit/: io.avream.helper.policy
packaging/systemd/user/: avreamd.env  avreamd.service
scripts/: avream-passwordless-setup.sh  build-apt-repo.sh  build-deb-split.sh  build-deb.sh  build-ppa-source.sh  build-rpm.sh  check-deb-artifact.sh  check-deb-split-artifacts.sh  check-rpm-artifact.sh  dev-install-all.sh  dev-install-helper.sh  dev-install-user-service.sh  doctor.sh  generate-dist-docs.sh  install.sh  migrate-source-bindings.py  test-split-upgrade.sh  uninstall.sh
scripts/lib/: install-platform.sh
site/: 404.html  index.html  release-manifest.json  release.js  robots.txt  sitemap.xml  styles.css
site/docs/: cli.html  faq.html  index.html  install.html  platforms.html  troubleshooting.html  user-guide.html
snap/: snapcraft.yaml
snap/local/: avream  avream-ui  avreamd
src/avreamd/: __init__.py  __main__.py  app.py  bootstrap.py  cli.py  config.py  constants.py  main.py
src/avreamd/api/: __init__.py  app_keys.py  errors.py  middleware.py  routes_android.py  routes_audio.py  routes_status.py  routes_update.py  routes_video.py  schemas.py  server.py  validation.py
src/avreamd/backends/: __init__.py  android_video.py
src/avreamd/core/: __init__.py  state_store.py  (+1 more)
tests/: conftest.py
tests/integration/: test_api_contract.py  test_api_status.py  test_video_and_doctor.py
ui/: pyproject.toml
ui/src/avream_ui/: __init__.py  api_client.py  i18n.py  main.py  window.py  window_behavior.py  window_behavior_core.py  window_behavior_passwordless.py  window_behavior_phone.py  window_behavior_service.py  window_behavior_settings.py  window_behavior_shortcuts.py  window_behavior_update.py  window_services.py  window_state.py
ui/src/avream_ui/locale/: avream.pot
ui/src/avream_ui/locale/ar/LC_MESSAGES/: avream.mo  avream.po
ui/src/avream_ui/locale/es/LC_MESSAGES/: avream.mo  avream.po
ui/src/avream_ui/locale/pl/LC_MESSAGES/: avream.mo  avream.po
ui/src/avream_ui/locale/zh_CN/LC_MESSAGES/: avream.mo  avream.po
(+54 files in other folders)
